--- a/style.css
+++ b/style.css
@@ -73,3 +73,40 @@ body {
   align-self: end;
   cursor: pointer;
 }
+/* Creating new tasks */
+ul {
+  padding-inline-start: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: start;
+}
+ul > div {
+  display: flex;
+  gap: 15px;
+  justify-content: space-between;
+  align-items: start;
+  background-color: white;
+  padding: 10px;
+  border-radius: 7px;
+}
+ul > div > div:first-child > button {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: solid 1px #b8b8b8;
+  background-color: white;
+  cursor: pointer;
+}
+ul > div > div:last-child {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+ul > div > div:last-child > button {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: solid 1px #b8b8b8;
+  background-color: white;
+}
