--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 /* Filling form */
 .form-background {
   width: 100%;
-  height: 700px;
+  height: 800px;
   background-color: #00000072;
   position: relative;
   /* padding-top: 30px; */
@@ -91,22 +91,55 @@ ul > div {
   border-radius: 7px;
 }
 ul > div > div:first-child > button {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+  width: 27px;
+  height: 27px;
   border: solid 1px #b8b8b8;
+  border-radius: 7px;
   background-color: white;
   cursor: pointer;
+  transition: all 0.3s;
 }
+ul > div > div:first-child > button:hover {
+  box-shadow: 2px 2px 2px #00000028;
+  border: dashed 1px rgb(164, 142, 0);
+}
+ul > div > div:nth-child(2) {
+  width: 180px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  inline-size: 150px;
+  overflow-wrap: break-word;
+}
+/* ul > div > div:nth-child(2) > p:nth-child(2) {
+  color: aqua;
+} */
 ul > div > div:last-child {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
 ul > div > div:last-child > button {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+  width: 27px;
+  height: 27px;
   border: solid 1px #b8b8b8;
+  border-radius: 7px;
   background-color: white;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+ul > div > div:last-child > button:hover {
+  box-shadow: 2px 2px 2px #00000028;
+  border: inset 1px rgb(164, 142, 0);
+}
+ul > div > div > div {
+  font-size: 12px;
+  color: rgba(128, 128, 128, 0.503);
+  border: solid 1px rgba(67, 13, 13, 0.184);
+  width: 50px;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 7px;
 }
