--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
 body {
   /* margin-top: 20px; */
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url(./background.png);
+  width: 100vw;
+  height: 100vh;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .list-boxes {
   display: flex;
@@ -55,7 +61,7 @@ body {
 /* Filling form */
 .form-background {
   width: 100%;
-  height: 800px;
+  height: 100%;
   background-color: #00000072;
   position: relative;
   /* padding-top: 30px; */
