--- a/style.css
+++ b/style.css
@@ -13,17 +13,24 @@ body {
   background-position: center;
 }
 .list-boxes {
+  width: 100%;
+  margin: center;
   display: flex;
   gap: 20px;
   justify-content: center;
   position: absolute;
-  margin-top: 50px;
-  margin-left: 80px;
+  margin-top: 150px;
+  /* margin-left: 80px; */
+}
+.box > div > h2::first-letter {
+  font-size: 40px;
+  color: #14213d;
+  text-shadow: 1px 1px 2px #e5e5e5, 0 0 25px #e5e5e5, 0 0 5px #e5e5e5;
 }
 .box {
   width: 300px;
   height: fit-content;
-  background-color: grey;
+  background-color: #fff;
   border-radius: 7px;
   padding: 20px;
   display: flex;
@@ -35,11 +42,18 @@ body {
   display: flex;
   align-items: center;
   gap: 10px;
+  color: #fca311;
 }
 .box > div > span {
-  color: white;
+  color: #14213d;
+  display: flex;
+  align-items: center;
+  margin-top: 4px;
 }
+
 .box > button {
+  background-color: #14213d;
+  color: #fff;
   cursor: pointer;
   flex-direction: column;
   padding: 7px;
@@ -48,12 +62,13 @@ body {
   border-radius: solid 1px #000;
   box-shadow: none;
   background-color: none;
-  border-inline: none;
+  /* border-inline: none; */
   border-style: none;
   transition: all 0.3s;
 }
 .box > button:hover {
-  transform: scale(1.05);
+  background-color: #fca311;
+  box-shadow: 1px 1px 10px #00000049;
 }
 .box > button:active {
   transform: scale(0.95);
@@ -68,30 +83,97 @@ body {
   display: none;
   transition: all 0.3s ease-in-out;
 }
-/* .form-background:active {
-  transform: scale(1.1);
-} */
+.edit-background {
+  width: 100%;
+  height: 100%;
+  background-color: #00000072;
+  position: relative;
+  /* padding-top: 30px; */
+  display: none;
+  transition: all 0.3s ease-in-out;
+}
 .form {
   width: 400px;
-  height: 400px;
+  height: 600px;
   display: flex;
   flex-direction: column;
   justify-content: start;
-  /* margin-left: 50px; */
   gap: 5px;
   margin: auto;
   background-color: white;
   border-radius: 7px;
-  /* margin-top: 50px; */
-  /* position: absolute; */
   padding: 20px;
+  background: linear-gradient(
+    140deg,
+    rgba(252, 163, 17, 1) 0%,
+    rgba(240, 114, 77, 1) 160%
+  );
 }
 .form > button:first-child {
   width: 50px;
   align-self: end;
   cursor: pointer;
+  background-color: #14213d;
+  color: #fff;
+  border-radius: 7px;
+  border: 1px solid #14213d;
+  transition: all 0.3s;
+}
+.form > button:first-child:hover {
+  box-shadow: 1px 1px 10px #0000004f;
+}
+.form > button:first-child:active {
+  transform: scale(0.9);
+}
+.form > h2 {
+  color: #fff;
+}
+.form > h2:first-letter {
+  color: #14213d;
+  font-size: 40px;
+}
+.form > label {
+  color: #fff;
+}
+.form > input {
+  border-radius: 3px;
+  border: none;
+  margin-bottom: 15px;
+  height: 55px;
+}
+.form > textarea {
+  border-radius: 3px;
+  border: none;
+  margin-bottom: 15px;
+  height: 400px;
+}
+.form > select {
+  border-radius: 3px;
+  border: none;
+  margin-bottom: 15px;
+  height: 55px;
+}
+.form > button {
+  background-color: #14213d;
+  border: none;
+  border-radius: 7px;
+  height: 100px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.form > button:hover {
+  background-color: #fff;
+  color: #14213d;
 }
 /* Creating new tasks */
+.dragg {
+  background-color: #fca311;
+  transition: all 0.3s;
+}
+.dragg:hover {
+  box-shadow: 5px 2px 10px #0000005a;
+}
 ul {
   padding-inline-start: 0;
   display: flex;
@@ -111,7 +193,7 @@ ul > div {
 ul > div > div:first-child > button {
   width: 27px;
   height: 27px;
-  border: solid 1px #b8b8b8;
+  border: solid 1px #fff;
   border-radius: 7px;
   background-color: white;
   cursor: pointer;
@@ -119,7 +201,7 @@ ul > div > div:first-child > button {
 }
 ul > div > div:first-child > button:hover {
   box-shadow: 2px 2px 2px #00000028;
-  border: dashed 1px rgb(164, 142, 0);
+  border: solid 1px #14213d;
 }
 ul > div > div:nth-child(2) {
   width: 180px;
@@ -128,10 +210,16 @@ ul > div > div:nth-child(2) {
   gap: 5px;
   inline-size: 150px;
   overflow-wrap: break-word;
+  color: #14213d;
 }
-/* ul > div > div:nth-child(2) > p:nth-child(2) {
-  color: aqua;
-} */
+ul > div > div:nth-child(2) > p:first-child {
+  color: #fff;
+  font-weight: 700;
+}
+ul > div > div:nth-child(2) > div {
+  color: #e5e5e5;
+  border: solid 1px #e5e5e5;
+}
 ul > div > div:last-child {
   display: flex;
   flex-direction: column;
@@ -140,7 +228,7 @@ ul > div > div:last-child {
 ul > div > div:last-child > button {
   width: 27px;
   height: 27px;
-  border: solid 1px #b8b8b8;
+  border: solid 1px #fff;
   border-radius: 7px;
   background-color: white;
   cursor: pointer;
@@ -148,7 +236,7 @@ ul > div > div:last-child > button {
 }
 ul > div > div:last-child > button:hover {
   box-shadow: 2px 2px 2px #00000028;
-  border: inset 1px rgb(164, 142, 0);
+  border: solid 1px #14213d;
 }
 ul > div > div > div {
   font-size: 12px;
@@ -160,13 +248,4 @@ ul > div > div > div {
   justify-content: center;
   align-items: center;
   border-radius: 7px;
-}
-/* Edit task */
-.edit-background {
-  position: relative;
-  background-color: #00000034;
-  width: 100%;
-  height: 700px;
-  padding-top: 50px;
-  display: none;
 }
