--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
   color: #14213d;
   display: flex;
   align-items: center;
-  margin-top: 4px;
+  margin-top: 12px;
 }
 
 .box > button {
@@ -100,6 +100,7 @@ body {
   margin: auto;
   background-color: white;
   border-radius: 7px;
+  border: solid 1px #14213d;
   padding: 20px;
   background: linear-gradient(
     140deg,
